--- a/ProjectSettings/ARCoreExtensionsProjectSettings.json
+++ b/ProjectSettings/ARCoreExtensionsProjectSettings.json
@@ -1,1 +1,1 @@
-{"Version":"1.34.0","IsIOSSupportEnabled":false,"AndroidAuthenticationStrategySetting":1,"AndroidCloudServicesApiKey":"","IOSAuthenticationStrategySetting":0,"IOSCloudServicesApiKey":"","CloudAnchorEnabled":true,"GeospatialEnabled":false}
+{"Version":"1.34.0","IsIOSSupportEnabled":false,"AndroidAuthenticationStrategySetting":1,"AndroidCloudServicesApiKey":"","IOSAuthenticationStrategySetting":0,"IOSCloudServicesApiKey":"","CloudAnchorEnabled":false,"GeospatialEnabled":true}
